<resources>
    <string name="app_name">Shoe Store</string>

    <!-- LoginFragment -->
    <string name="login_fragment_label">Login</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_button">Login</string>
    <string name="login_new_account_button">New Account</string>

    <!-- WelcomeFragment -->
    <string name="welcome_fragment_label">Welcome</string>
    <string name="welcome_1">Hello, and welcome to the Shoe Store computer-aided inventory enrichment application.</string>
    <string name="welcome_2">Before we start, however, keep in mind that although shoe management is the primary goal of all inventory app activities, serious injuries may occur.</string>
    <string name="welcome_next_button">Next</string>

    <!-- InstructionFragment -->
    <string name="instruction_fragment_label">Instructions</string>
    <string name="instruction_1">Very good! You are now in possession of the Shoe Store Handheld Inventory App.</string>
    <string name="instruction_2">With it, you can create your own shoes.</string>
    <string name="instruction_3">These intra-dimensional shoes have proven to be completely safe.</string>
    <string name="instruction_4">This app, however, has not.</string>
    <string name="instruction_next_button">Next</string>

    <!-- ShoeListFragment -->
    <string name="shoe_list_instructions">Oh no! You don\'t have any shoes. Press the button below to get started.</string>
    <string name="shoe_list_fragment_label">Shoe Inventory</string>
    <string name="shoe_list_company_format">Company: %s</string>
    <string name="shoe_list_size_format">Size: %.1f</string>
    <string name="shoe_list_description_format">Description: %s</string>
    <string name="shoe_list_add_button">Add new shoe</string>

    <!-- ShoeDetailFragment -->
    <string name="shoe_detail_fragment_label">Add New Shoe</string>
    <string name="shoe_detail_name">Shoe name</string>
    <string name="shoe_detail_company">Company</string>
    <string name="shoe_detail_size">Size</string>
    <string name="shoe_detail_description">Description</string>
    <string name="shoe_detail_save_button">Save</string>
    <string name="shoe_detail_cancel_button">Cancel</string>

    <!-- Logout Menu -->
    <string name="logout_menu_item">Logout</string>
</resources>
